--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
 <body>
     <div class="scanline"></div>
     <div class="cyber-container">
-        <h1 class="cyber-title">> SYSTEM_UPGRADE</h1>
-        <div class="terminal-line line1">> Initializing core components...</div>
-        <div class="terminal-line line2">> Optimizing system modules...</div>
-        <div class="terminal-line line3">> Preparing launch sequence...</div>
+        <h1 class="cyber-title">>MOHAMMED_ROSHAN</h1>
+        <div class="terminal-line line1">> Initializing ...</div>
+        <div class="terminal-line line2">> Great things take time....</div>
+        <div class="terminal-line line3">> Wait for the Launch...</div>
         <a href="mailto:hello@mrroshan.in" class="email-link">> hello@mrroshan.in</a>
     </div>
 </body>
