--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <div class="cyber-container">
         <h1 class="cyber-title">>MOHAMMED_ROSHAN</h1>
         <div class="terminal-line line1">> Initializing ...</div>
-        <div class="terminal-line line2">> Wait for the Launch...</div>
+        <div class="terminal-line line2">> Cybersecurity & Network Engineering Enthusiast</div>
         <div class="terminal-line line3">> Github: MohammedRoshanT.</div>   
         <a href="mailto:hello@mrroshan.in" class="email-link">> mr.roxhan@gmail.com</a>
     </div>
